@@ -1,3 +1,9 @@
+Tue Oct  5 11:27:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        * ciao/Deployment/Handlers/Connection_Handler.h:
+         Fixed typo's
+
+
 Tue Oct  5 10:48:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Deployment/Handlers/Connection_Handler.h:
